# quick-bench

./: Cargo.toml  readme.md
src/: helpers.rs  main.rs
src/benchmark/: cpu.rs  gpu.rs  mod.rs
src/info/: cpu.rs  gpu.rs  mod.rs  network.rs  power.rs
