[package]
name = "quick_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.31.4"
tch = "0.15.0"
ndarray = "0.15"  # For CPU numerical computations
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
battery = "0.7.8"
reqwest = "0.12.7"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
rand = "0.8.5"
